cmake_minimum_required(VERSION 3.20)
project(logger VERSION 2.0.1)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(WIN32)
    add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
else()
    if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
        set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fPIC")
    elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
        set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fPIC")
    endif()
endif()
add_library(${PROJECT_NAME} STATIC logger.h logger.cpp)
if (LINUX OR APPLE)
    target_link_libraries(${PROJECT_NAME} pthread)
endif()
if (ANDROID)
    target_link_libraries(${PROJECT_NAME} log)
endif()